--- a/index.html
+++ b/index.html
@@ -19,15 +19,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <!-- CDN Bootstrap--> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
-    <header class="bloque_superior">
-        <div class="bs_izq">
-            <!--colocar imagen del logo-->
-        </div>
-        <div class="bs_cen"></div>
-        <div class="bs_der">
-            <nav>
+    <header class="container-fluid">
+        <div class="row bloque_superior">
+            <div class="col-6 col-md-5 col-lg-4 col-xl-5 bs_izq">
+                <!--colocar imagen del logo-->
+            </div>
+            <div class="col-md-1 d-md-inline-block d-none bs_cen"></div>
+            
+            <nav class="col-6 col-md-6 col-lg-5 col-xl-4 d-md-inline-flex">
+
+                <input id="menu-toggle" type="checkbox" />
+                <label class='menu-button-container' for="menu-toggle">
+                  <div class='menu-button'></div>
+                </label>
+
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="pages/about.html">About me</a></li>
@@ -35,7 +45,7 @@
                     <li><a href="pages/contact.html">Contacto</a></li>
                 </ul> 
             </nav>
-            <div class="btn_contact">
+            <div class="col-lg-2 d-lg-inline-flex d-none bt_contacto">
                 <a href="pages/contact.html">Let's talk</a>
             </div>
         </div>
@@ -86,5 +96,7 @@
         </section>
     </main>
     
+    <!-- CDN Bootstrap--> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
