--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
     <!-- Animate --> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
+    <!-- Material Icon --> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header class="container-fluid">
@@ -35,7 +38,7 @@
             <div class="col-md-1 d-md-inline-block d-none bs_cen"></div>  
             <nav class="col-6 col-md-6 col-lg-5 col-xl-4 d-md-inline-flex">
                 <input id="menu-toggle" type="checkbox" />
-                <label class='menu-button-container' for="menu-toggle">
+                <label class='menu-button-container p-0' for="menu-toggle">
                   <div class='menu-button'></div>
                 </label>
                 <ul>
@@ -51,7 +54,7 @@
 
     <main class="container-fluid">
         <div class="row bloque_central">
-                <div class="col-md-3 d-md-inline-block d-none d-flex flex-column p-0">
+                <div class="col-md-2 col-lg-3 d-md-inline-block d-none d-flex flex-column p-0">
                     <div class="bc_sup"></div>
                     <div class="flex-fill"></div>
                 </div>
@@ -75,17 +78,24 @@
                             height="32">
                     </a>
                 </div>
-                <div class="col-lg-2 bc_client d-lg-inline-block d-none"></div>
-                <div class="col-12 col-sm-11 col-md-8 col-lg-6 d-flex flex-column align-items-end bc_ppal">
+                <div class="col-xl-2 bc_client d-xl-inline-block d-none"></div>
+                <div class="col-12 col-sm-11 col-md-9 col-lg-8 col-xl-6 d-flex flex-column align-items-end bc_ppal">
                     <div class="home_tit">
                         <p class="fadeIn2s">Digital Designer</p>
-                        <p class="fadeIn3s"><span class="fadeIn4s">Front</span>Developer</p>
+                        <div class="d-flex justify-content-end">
+                            <p class="home_tit_front fadeIn4s">Front</p>
+                            <p class="fadeIn3s">Developer</p>
+                        </div>
                     </div>
-                    <div>
+                    <div class="home_tit_com">
                         <p class="home_com pb-3">Comentario 1</p>
                         <p class="home_com">Comentario 2</p>
+                    </div>                    
+                    <a class="link_about d-inline-flex align-items-stretch" href="./pages/about.html">
+                        <span class="material-symbols-outlined">arrow_outward</span>                                
+                        <p class="ps-2">More about me</p>
+                    </a>
                     </div>
-                    <a class="link_about" href="./pages/about.html">More about me</a>
                 </div>            
 
     </main>
