--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="styles/style.css">
 
-    <link rel="shortcut icon" href="media/reactfavicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./media/reactfavicon.png" type="image/x-icon">
     
     <!-- Barlow family--> 
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
