--- a/pages/about.html
+++ b/pages/about.html
@@ -44,7 +44,7 @@
                         <li><a href="./contact.html">Contacto</a></li>
                     </ul> 
                 </nav>
-                <a class="col-lg-2 d-lg-inline-flex d-none bt_contacto" href="pages/contact.html">Let's talk</a>
+                <a class="col-lg-2 d-lg-inline-flex d-none bt_contacto" href="./contact.html">Let's talk</a>
             </div>
         </header>
         <main class="container-fluid">
