--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                   <div class='menu-button'></div>
                 </label>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="pages/about.html">About me</a></li>
-                    <li><a href="pages/gallery.html">Works</a></li>
-                    <li><a href="pages/contact.html">Contacto</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./pages/about.html">About me</a></li>
+                    <li><a href="./pages/gallery.html">Works</a></li>
+                    <li><a href="./pages/contact.html">Contacto</a></li>
                 </ul> 
             </nav>
-            <a class="col-lg-2 d-lg-inline-flex d-none bt_contacto" href="pages/contact.html">Let's talk</a>
+            <a class="col-lg-2 d-lg-inline-flex d-none bt_contacto" href="./pages/contact.html">Let's talk</a>
         </div>
     </header>
 
