nuevos estilos responsive sobre Works y Contacto. nuevos works.

--- a/pages/about.html
+++ b/pages/about.html
@@ -54,12 +54,12 @@
                     <img class="img_about img-fluid" src="../media/fotodeperfil.jpg" alt="Foto de perfil Dario Costa">
                 </div>
                 <div class="col-12 col-xl-7 d-flex flex-column p-0">
-                    <div class="b_titulo_ab py-3 px-5">HELLO. I AM DARIO</div>
-                    <div class="b_cent_ab p-5">
+                    <div class="b_titulo_ab p-5">HELLO. I AM DARIO</div>
+                    <div class="h-75 b_cent_ab p-5">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor consequat mauris, vitae mollis libero ultricies eget. Aliquam efficitur ut sapien sit amet elementum. Vestibulum in est leo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum porta ligula eget est aliquet scelerisque. Cras vulputate massa nec orci aliquam, sed consequat urna posuere. Etiam sit amet nisl et diam laoreet congue mollis id leo. Curabitur dolor ex, condimentum ac nisl non, tincidunt pharetra velit. In ultricies ligula nec nibh efficitur fermentum. Phasellus placerat semper justo eget aliquet. Aenean condimentum sed ipsum placerat blandit. Proin tristique nisi efficitur dictum scelerisque.</p>
                         <p>Suspendisse nec commodo quam. Mauris magna purus, consequat a sapien sit amet, mattis placerat diam. Suspendisse ac semper eros. In vehicula lectus ex, aliquet viverra turpis iaculis in. Aliquam convallis feugiat lorem, ac sodales lacus fermentum ut. Etiam molestie risus ut enim finibus pellentesque. Proin ex risus, feugiat at egestas et, ultricies sed risus. Donec auctor mi tortor. Integer tincidunt pulvinar condimentum. Aliquam gravida libero non velit hendrerit finibus. Pellentesque ligula dolor, malesuada id sollicitudin tempor, pellentesque eget velit. Duis nisi felis, pulvinar vitae fermentum in, venenatis sed tortor. Duis sit amet nisi quis ligula rutrum placerat. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
                     </div>
-                    <div class="col-12 ms-5 d-flex flex-fill">
+                    <div class="col-12 ms-1 d-flex flex-fill rect_inf">
                         <div class="col-6 ms-5 rect_n"></div>
                     </div>
                 </div>
