actualizaciones en estilos responsive y formulario

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -25,6 +25,9 @@
     
         <!-- Animate --> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
+        <!-- Material Icon --> 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,0" />
     </head>
 <body>
     <header class="container-fluid">
@@ -51,28 +54,40 @@
     <main class="container-fluid">
         <div class="row bc_about_sup">
             <div class="col-12 col-md-3 d-inline-flex flex-column justify-content-center align-items-center menu_works pe-5">
-                <a class="w-100 work work_sel" href="gallery.html">Noes.arte</a>
-                <a class="w-100 work" href="work2.html">ivanzim</a>
-                <a class="w-100 work" href="work3.html">ivanbenja</a>
-                <a class="w-100 work" href="work4.html">Kishima Broker</a>
+                <a class="w-100 work work_sel" href="gallery.html">
+                    <span class="material-symbols-outlined">east</span>
+                    Noes.arte
+                    </a>
+                <a class="w-100 work" href="ivanzim.html">
+                    <span class="material-symbols-outlined">east</span>
+                    ivanzim
+                </a>
+                <a class="w-100 work" href="work3.html">
+                    <span class="material-symbols-outlined">east</span>
+                    ivanbenja
+                </a>
+                <a class="w-100 work" href="work4.html">
+                    <span class="material-symbols-outlined">east</span>
+                    Kishima Broker
+                </a>
             </div>
             <div class="col-12 col-md-9 d-inline-flex flex-column p-5 cont_over">
-                <div class="b_titulo_w">noes.arte</div>
+                <div class="b_titulo_w fw-bold">noes.arte</div>
                 <p class="det_w pb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor consequat mauris, vitae mollis libero ultricies eget. Aliquam efficitur ut sapien sit amet elementum. Vestibulum in est leo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum porta ligula eget est aliquet scelerisque. Cras vulputate massa nec orci aliquam, sed consequat urna posuere.</p>
                 <div class="container-fluid p-5">
                     <div class="row text-center border border-dark border-2">
                         <div class="col-12 col-sm-6 p-5">
-                            <img class="img-fluid" src="../media/noesarte/pagcompleta_noesarte.png" alt="Pagina completa Noesarte">
+                            <img class="img-fluid fadeIn2s" src="../media/noesarte/pagcompleta_noesarte.png" alt="Pagina completa Noesarte">
                         </div>
                         <div class="col">
                             <div class="row p-5">
                                 <div class="col-12">
-                                    <img class="img-fluid" src="../media/noesarte/cpeqilustrada_noesarte.png" alt="Curso Pequeña Historia del Arte Ilustrada en Noesarte">
+                                    <img class="img-fluid fadeIn2s" src="../media/noesarte/cpeqilustrada_noesarte.png" alt="Curso Pequeña Historia del Arte Ilustrada en Noesarte">
                                 </div>
                             </div>
                             <div class="row p-5">
                                 <div class="col-12">
-                                    <img class="img-fluid" src="../media/noesarte/chistartista_noesarte.png" alt="Curso Historia de una artista en Noesarte">
+                                    <img class="img-fluid fadeIn2s" src="../media/noesarte/chistartista_noesarte.png" alt="Curso Historia de una artista en Noesarte">
                                 </div>
                             </div>
                         </div>
