--- a/pages/contact.html
+++ b/pages/contact.html
@@ -69,7 +69,7 @@
                             <textarea class="form-control pt-5 pb-4 inputfont txarea" placeholder="Leave a comment here" id="floatingTextMessage"></textarea>
                             <label for="floatingTextMessage">Comments</label>
                         </div>
-                        <div class="d-flex justify-content-center">
+                        <div class="d-flex justify-content-start">
                             <button class="btn btn-primary formbtn py-3 px-5" type="button">SEND</button>
                           </div>
                     </form>
